# Airbnb_AWS_DBT_Snowflake_DE_Project

./: pyproject.toml
aws_dbt_snowflake_project/: .user.yml  dbt_project.yml  profiles.yml
aws_dbt_snowflake_project/analyses/: if_else.sql
aws_dbt_snowflake_project/macros/: multiply.sql  trimmer.sql
aws_dbt_snowflake_project/models/bronze/: bronze_bookings.sql  bronze_hosts.sql  bronze_listings.sql
aws_dbt_snowflake_project/models/gold/: fact.sql  obt.sql
aws_dbt_snowflake_project/models/silver/: silver_bookings.sql  silver_hosts.sql  silver_listings.sql
aws_dbt_snowflake_project/models/sources/: sources.yml
aws_dbt_snowflake_project/tests/: source_tests.sql
sqlfmt/: main.py  pyproject.toml
