[project]
name = "aws-dbt-snowflake"
version = "0.1.0"
description = "AWS DBT Snowflake"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.2",
    "dbt-snowflake>=1.11.0",
    "sqlfmt>=0.0.3",
]

[tool.uv.workspace]
members = [
    "aws_dbt_snowflake_project/sqlfmt",
    "sqlfmt",
]
